--- a/practicas/practica2/ejercicio9/css/style1.css
+++ b/practicas/practica2/ejercicio9/css/style1.css
@@ -17,7 +17,7 @@
 
 .banner.valorant{background-image: linear-gradient(to right,white, #fd4350,#fd4350,#fd4350, white );}
 .banner.r6s {background-image: linear-gradient(to right, #000,#000000,darkgray,#fff, #fff);}
-.banner.cs2{background-image: linear-gradient(to right, #000,#000000,darkgray,#000, #000);}
+.banner.cs2{background-image: linear-gradient(to right, #000,#293545,#000);}
 .cs2 h1 {font-size: 25px}
 .valorant h1{color: white; font-size: 25px}
 
@@ -27,9 +27,17 @@ main {
     display: flex;
     align-items: center;
     flex-basis: 250px;
-    flex-flow: column;
+    flex-flow: column wrap;
+}
+main img{
+    width: 150px;
+    height: 100px;
 }
 main.r6s{
     background-color: #292526;
     color: white;
 }
+main.cs2{
+    background-color:  #293545;
+}
+
