--- a/practicas/practica2/css/index5.css
+++ b/practicas/practica2/css/index5.css
@@ -4,6 +4,9 @@
     margin: 0;
     font-family: "Roboto", sans-serif;
 }
+.imgContainer{
+    place-self: center;
+}
 form{
     display: flex;
     flex-flow: column wrap;
