--- a/practicas/practica2/css/index6.css
+++ b/practicas/practica2/css/index6.css
@@ -14,21 +14,39 @@ main .container{
     padding: 20px;
     border-radius: 15px;
     color: whitesmoke;
+    gap: 30px;
 }
 .container form{
     display: flex;
     flex-flow: column wrap;
-    gap: 20px;
+    gap: 40px;
     align-items: center;
     width: 100%;
 }
 .container form div{
     width: 100%;
     display: flex;
+    gap: 10px;
     flex-flow: column wrap;
     align-items: center;
     place-content: center;
 }
 .container form div input {
     width: 70%;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.container form button{
+    padding: 15px;
+    width: 75%;
+    font-size: 20px;
+    color: whitesmoke;
+    border: none;
+    border-radius: 15px;
+    background-color: #1abc9c;
+}
+.container form button:hover{
+    background-color: #0a0907;
+    color: #1abc9c;
 }
