--- a/practicas/practica2/css/ejercicio7.css
+++ b/practicas/practica2/css/ejercicio7.css
@@ -1,21 +1,26 @@
-body{
+body {
     background-color: #1e1e1e;
+}
+.container{
+    display: flex;
+    place-content: center;
+    width: 100%;
 }
 table {
     margin-top: 30px;
     width: 80%;
     align-content: center;
     appearance: none;
-    border-collapse: collapse ;
+    border-collapse: collapse;
     border: whitesmoke 2px solid;
     font-family: "Roboto", sans-serif;
     color: whitesmoke;
 }
 
- table td, th{
+table td, th {
     border: 2px solid whitesmoke;
     margin: 0;
-     padding: 5px;
+    padding: 5px;
 }
 
 .selected {
