--- a/practicas/practica2/css/index8.css
+++ b/practicas/practica2/css/index8.css
@@ -5,7 +5,10 @@ body{
     flex-flow: column wrap;
     gap: 20px;
     font-family: "Roboto", sans-serif;
-
+    background-color: #0a0907;
+}
+h1{
+    color: #1abc9c;
 }
 form{
     display: flex;
@@ -20,7 +23,7 @@ form{
 }
 form label{
     padding: 10px;
-    background-color: #0f1c4d;
+    background-color: #1abc9c;
     border-radius: 15px 0 0 15px ;
     color: aliceblue;
     margin: 0;
@@ -37,9 +40,13 @@ form select{
 form button{
     align-self: center;
     font-size: 15px;
-    padding: 10px;
-    border-radius: 15px;
+    padding: 15px;
+    border-radius: 10px;
     border: 1px;
-    background-color: #0f1c4d;
+    background-color: #1abc9c;
     color: aliceblue;
+}
+form button:hover{
+    background-color: whitesmoke;
+    color: #1abc9c;
 }
